Agregar card component y tailwind

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -1,4 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body{
-  background-color: #02211e;
-  color: white;
+  background-color: theme('colors.emerald.950');
 }
